k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcontainers
  labels:
    app: webcontainers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webcontainers
  template:
    metadata:
      labels:
        app: webcontainers
    spec:
      containers:
        - name: webcontainers
          image: ghcr.io/sayjeyhi/presentation-web-containers:latest
          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              memory: "128Mi"
