k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcontainers-service
spec:
  selector:
    app: webcontainers
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
